fixed tool-tip wrapping in agents-editor

--- a/app/styles/components/agents/agent-behavior.css
+++ b/app/styles/components/agents/agent-behavior.css
@@ -261,6 +261,10 @@ tr {
     display:none;
 }
 
+.item-row-value [data-tooltip]:before {
+  background-color: #fffea1;
+}
+
 .item-row-content:hover .hover-content {
      display:flex;
 }
